--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
         uses: littleboyfury/ssh-docker-run@v1.0.0
         with:
           deploy_token: ${{secrets.DEPLOY_TOKEN}}
-          server_host: 22
-          docker_host: 121.199.52.135
+          server_host: root@121.199.52.135
+          docker_host: hub.docker.com
           docker_username: skynesser
           docker_password: ${{secrets.PASSWORD}}
           docker_namespace: skynesser
