--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,28 +1,31 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+# 工作流名称
+name: Go package
+# 任务名称
+run-name: Go Build && Test
+# 触发事件
+on: [push]
 
-name: Go
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+# 工作
 jobs:
-
+  # 工作的名字叫做build
   build:
+	# 运行在ubuntu上
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.18
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
+      # 使用actions，将文件传到服务器上，use声明使用的actions
+      - uses: actions/checkout@v3
+	  # 配置go语言环境	
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        # 配置actions的参数，这里是go的版本
+        with:
+          go-version: 1.18
+      # 下载依赖
+      - name: Install dependencies
+        run: go mod download
+      # 编译项目
+      - name: Build
+        run: go build -v .
+     # 运行测试 
+      - name: Test
+        run: go test -v .
